[package]
name = "pacman"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pacman"
path = "src/main.rs"

[workspace]
members = [
    "encryption_service",
    "encryption",
    "request_analysis",
]

[workspace.dependencies]
bytes = "1.9.0"
futures-util = "0.3.31"
http-body-util = "0.1.2"
futures = "0.3.31"
http = "1.2.0"
hyper = "1.6.0"
hyper-tls = "0.6.0"
hyper-util = "0.1.10"
base32 = "0.5.1"
rustls = "0.23.21"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = "0.26.1"
tokio-util = "0.7.13"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
http = "1.2.0"
rustls = "0.23.21"
tokio-rustls = "0.26.1"
rustls-pemfile = "2.2.0"
clap = { version = "4.5.24", features = ["derive"] }

boa_engine = "0.20.0"
boa_parser = "0.20.0"

tls-parser = "0.12.2"

hyper-util = "0.1.10"
hyper-tls = "0.6.0"
