[package]
name = "pacman"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pacman"
path = "src/main.rs"

[workspace]
members = [
    "encryption_service",
    "encryption",
    "request_analysis",
]

[workspace.dependencies]
bytes = "1.6.0"
futures = "0.3.30"
futures-util = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.1"
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
rustls = "0.23.21"
tokio-rustls = "0.26.1"
rustls-pemfile = "2.2.0"
clap = { version = "4.5.24", features = ["derive"] }
hyper-util = { version = "0.1.10", features = ["full", "client", "http1", "http2"] }
hyper-tls = "0.6.0"
boa_engine = "0.20.0"
boa_parser = "0.20.0"
tls-parser = "0.12.2"
tokio-util = { version = "0.7.13", features = ["compat"] }
pin-project-lite = "0.2.16"
async-trait = "0.1.75"

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
clap = { workspace = true }
boa_engine = { workspace = true }
boa_parser = { workspace = true }
hyper-tls = { workspace = true }
tls-parser = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
hyper-util = { workspace = true }
pin-project-lite = { workspace = true }
