[package]
name = "encrypted_client"
version = "0.1.0"
edition = "2021"

[dependencies]
request_analysis = { path = "../request_analysis" }
encryption = { path = "../encryption" }

bytes = { workspace = true }
http-body-util = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = {  workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["http1", "http2"] }
hyper-tls = { workspace = true }
futures-util = { workspace = true }
tokio =  { workspace = true }


