[package]
name = "encrypted_server"
version = "0.1.0"
edition = "2021"

[dependencies]
encryption = { path = "../encryption" }
bytes = { workspace = true }
futures = { workspace = true }
hyper = {  workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["http1", "http2", "tokio"] }
tokio =  { workspace = true }
http-body-util = { workspace = true }

