[package]
name = "encryption_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "encryption_client"
path = "src/bin/client.rs"

[[bin]]
name = "encryption_server"
path = "src/bin/server.rs"

[dependencies]
encryption = { path = "../encryption" }
request_analysis = { path = "../request_analysis" }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-tls = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = "1.5.0"
futures = { workspace = true }
futures-util = { workspace = true }
